# FilteringGpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: utils.cmake
includes/: Color.h  demoFilters.h  filtering.h  image.h  parameters.h  utils.cmake  windowManager.h
src/: main.cpp  parameters.cpp
src/filter/: CMakeLists.txt
src/filter/cuda/: kernel.cu  utils.cuh
src/filter/src/: Color.cpp  cpuFilter.cpp  cudaFilter.cpp  filtering.cpp  image.cpp
src/renderer/: CMakeLists.txt  windowManager.cpp
